# MCPlaywright

./: .gitignore  README.md  conftest.py  index.html  pyproject.toml  pytest.ini  server.py
.github/workflows/: tests.yml
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 3cfd3208608fac30.txt
data/test-cases/: 28f6bb6403b67ae2.json  340c29ef730a3f9b.json  3a2d948d39c52dec.json  6f16595487a7377d.json  7ea178c83cc35e05.json  81a148ca9ee197b8.json  9b5c875271189747.json  9b9e495888ceff3b.json  f7f7e19a017e5d52.json  ff2934aa57f071d5.json
export/: influxDbData.txt  prometheusData.txt
fastmcp/: schemas.py  server.py
fastmcp/tools/: __init__.py  echo_tool.py  external_api_tool.py
fastmcp_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
history/: history.json
tests/: conftest.py  test_playwright.py  test_tool.py
tests/features/: root.feature
tests/pages/: base_page.py  root_page.py
tests/steps/: test_root_steps.py
tests/utils/: browser.py  server.py
tools/: echo_tool.py
widgets/: duration-trend.json  severity.json  status-chart.json  suites.json  summary.json
